# decafclaw

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
.claude/dev-sessions/2026-03-13-1710-initial-agent/: notes.md
.claude/dev-sessions/2026-03-13-1956-live-tool-progress/: notes.md  plan.md
.claude/dev-sessions/2026-03-13-2319-user-memory/: plan.md  spec.md
.claude/dev-sessions/2026-03-14-1024-conversation-compaction/: plan.md
.claude/dev-sessions/2026-03-14-1121-eval-loop/: plan.md
.claude/dev-sessions/2026-03-14-1314-conversation-resume/: notes.md  plan.md  spec.md
.claude/dev-sessions/2026-03-14-1346-semantic-search/: plan.md  spec.md
.claude/dev-sessions/2026-03-14-2256-skills-system/: spec.md
.claude/dev-sessions/2026-03-15-0102-mcp-server-support/: notes.md  plan.md  spec.md
.claude/dev-sessions/2026-03-15-1051-heartbeat-prompt/: notes.md  spec.md
.claude/dev-sessions/2026-03-15-1402-streaming-responses/: plan.md  spec.md
.claude/dev-sessions/2026-03-15-1444-deployment/: notes.md
.claude/dev-sessions/2026-03-16-1011-code-quality-cleanup/: notes.md
.claude/dev-sessions/2026-03-16-1132-claude-code-skill/: notes.md  spec.md
.claude/dev-sessions/2026-03-16-1151-fix-empty-llm-response/: spec.md
.claude/dev-sessions/2026-03-16-1430-interactive-buttons/: notes.md
.claude/dev-sessions/2026-03-16-1700-web-gateway/: plan.md  spec.md
.claude/dev-sessions/2026-03-16-file-editing-tools/: notes.md  spec.md
.claude/dev-sessions/2026-03-17-1413-responsive-ui/: notes.md  plan.md  spec.md
.claude/dev-sessions/2026-03-17-1600-incremental-compaction/: notes.md  plan.md  spec.md
.claude/dev-sessions/2026-03-17-1700-sub-agent-delegation/: plan.md
.claude/dev-sessions/2026-03-18-1017-concurrent-tools-delegate/: plan.md  spec.md
.github/workflows/: ci.yml
contrib/daily-todo-migration/: SKILL.md
contrib/skills/: .gitignore  README.md
deploy/: decafclaw.service
docs/: BACKLOG-CORE.md  BACKLOG-DEVINFRA.md  BACKLOG-MATTERMOST.md  BACKLOG-SKILLS.md  BACKLOG.md  CONTEXT-MAP.md  DIY-AGENT-SPEC.md  architecture.md  background-wake.md  client.md  code-execution.md  commands.md  config.md  context-composer.md  context-map.md  conversations.md  data-layout.md  delegation.md  deployment.md  dream-consolidation.md  effort-levels.md  email.md  eval-loop.md  file-attachments.md  files-tab.md  heartbeat.md  http-server.md  index.md  ingest-skill.md  installation.md  kindle.md  loop-breaker.md  mcp-servers.md  memory-context.md  memory.md  model-selection.md  newsletter.md  notes.md  notifications.md  postmortem-skill.md  (+21 more)
docs/backlog/: core.md  devinfra.md  index.md  mattermost.md  skills.md
evals/: conversation.yaml  delegate.yaml  diagnostic_discipline.yaml  grace-turn.yaml  history.jsonl  ingest.yaml  map_widget.yaml  memory-multi-turn.yaml  memory-semantic.yaml  memory.yaml  postmortem.yaml  project-skill.yaml  shell.yaml  skill-authoring.yaml  tool-deferral.yaml  vault.yaml  workflow_routing.yaml  workflows.yaml  workspace-tools.yaml
evals/fixtures/: cat-facts-embeddings.db
evals/tool_choice/: code_execution.yaml  core_overlaps.yaml  meta_and_negative.yaml
scripts/: build-eval-fixtures.py  deploy.sh  fix-double-md.sh  gen_message_types.py  migrate_sidecars_to_dirs.py  migrate_to_vault.py  migrate_vault_root.py  setup-vm.sh  smoke_workflow_engine.py  test-image-mcp.py
src/decafclaw/: __init__.py  _dev_filter.py  agent.py  archive.py  attachments.py  canvas.py  checklist.py  commands.py  compaction.py  compaction_decisions.py  config.py  config_cli.py  config_types.py  confirmations.py  context.py  context_cleanup.py  context_composer.py  conversation_export.py  conversation_manager.py  conversation_paths.py  embeddings.py  events.py  frontmatter.py  heartbeat.py  http_server.py  interactive_terminal.py  iteration_budget.py  llm.py  loop_breaker.py  mail.py  mattermost.py  mattermost_display.py  mattermost_ui.py  mcp_client.py  media.py  memory.py  memory_context.py  notes.py  notifications.py  persistence.py  (+16 more)
tests/: conftest.py  test_agent_loop_breaker.py  test_agent_turn.py  test_agent_widgets.py  test_archive.py  test_ask_user.py  test_ask_user_multiple_choice.py  test_ask_user_text.py  test_attachments.py  test_background_tools.py  test_background_wake_integration.py  test_blog_develop_skill.py  test_canvas.py  test_canvas_tools.py  test_checklist.py  test_checklist_tools.py  test_circuit_breaker.py  test_claude_code_context.py  test_claude_code_diff.py  test_claude_code_file_staging.py  test_claude_code_output.py  test_claude_code_permissions.py  test_claude_code_progress.py  test_claude_code_sessions.py  test_client_cli.py  test_client_recorder.py  test_client_run.py  test_commands.py  test_compaction.py  test_compaction_decisions.py  test_config.py  test_config_cli.py  test_confirmation.py  test_context.py  test_context_cleanup.py  test_context_composer.py  test_conversation_export.py  test_conversation_folders.py  test_conversation_manager.py  test_conversation_paths.py  (+145 more)
tests/skills/: test_code_execution_dispatch.py  test_code_execution_limits.py  test_code_execution_sandbox.py  test_code_execution_skill_loading.py
tests/web/: conftest.py  test_terminal_command.py  test_terminal_ws.py  test_workspace_http.py  test_workspace_paths.py
tests/workflow/: __init__.py  test_command_workflow_mode.py  test_conv_state.py  test_cycles.py  test_engine.py  test_jinja_env.py  test_loader.py  test_research_brief.py  test_step_executors_llm_call.py  test_step_executors_python.py  test_step_executors_route.py  test_step_executors_subagent.py  test_step_executors_tool_call.py  test_step_executors_user_input.py  test_types.py  test_workflow_run_dispatch.py  test_workflow_tools.py  test_workflow_tools_user_input.py
tui/: README.md  package-lock.json  package.json  tsconfig.json
tui/src/: App.tsx  conversationPicker.test.ts  conversationPicker.tsx  dispatcher.test.ts  dispatcher.ts  entry.tsx  env.d.ts  parseArgs.test.ts  parseArgs.ts  types.generated.ts  types.ts  wsClient.test.ts  wsClient.ts
(+759 files in other folders)
