[project]
name = "decafclaw"
version = "0.1.0"
description = "A minimal AI agent for learning how agent frameworks work"
readme = "README.md"
authors = [
    { name = "Les Orchard", email = "lorchard@mozilla.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "tabstack>=2.3.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = ["watchfiles>=1.0.0"]

[project.scripts]
decafclaw = "decafclaw:main"
decafclaw-reindex = "decafclaw.embeddings:reindex_cli"
decafclaw-search = "decafclaw.embeddings:search_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (we use 120 but some tool descriptions are longer)
    "F401",   # unused imports (some are re-exports)
]
