[project]
name = "decafclaw"
version = "0.1.0"
description = "A minimal AI agent for learning how agent frameworks work"
readme = "README.md"
authors = [
    { name = "Les Orchard", email = "lorchard@mozilla.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "claude-code-sdk>=0.0.25",
    "croniter>=6.0.0",
    "curl-cffi>=0.7.0",
    "google-auth>=2.0.0",
    "httpx>=0.28.1",
    "aiosmtplib>=3.0.0",
    "jsonschema>=4.0",
    "lxml>=5.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "requests>=2.0.0",
    "sqlite-vec>=0.1.7",
    "starlette>=0.52.1",
    "tabstack>=2.6.1",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
    "snowballstemmer>=2.2.0",
]

[project.optional-dependencies]
dev = ["watchfiles>=1.0.0"]

[project.scripts]
decafclaw = "decafclaw:main"
decafclaw-reindex = "decafclaw.embeddings:reindex_cli"
decafclaw-prune-embeddings = "decafclaw.embeddings:prune_embeddings_cli"
decafclaw-search = "decafclaw.embeddings:search_cli"
decafclaw-token = "decafclaw.web.auth:token_cli"
decafclaw-client = "decafclaw.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.6.0",
    "pyyaml>=6.0.3",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Promote pytest's unraisable-exception warning to an error so a leaked
# resource (e.g. an unclosed asyncio subprocess transport GC'd after its event
# loop closes) fails the suite deterministically instead of flakily dirtying it
# with an intermittent "1 warning" (#605).
filterwarnings = [
    "error::pytest.PytestUnraisableExceptionWarning",
]
# Default pytest invocation:
#   - `-n auto --dist=worksteal` runs unit tests in parallel across CPU cores.
#     Override with `-n 0` for serial runs (debugging with `pdb`, or cleaner
#     `-v` output).
#   - `-m "not integration"` excludes real-API integration tests from the
#     default suite. They cost money, hit rate limits, and aren't run in CI.
#     Run them explicitly via `make test-integration` (which overrides the
#     marker filter and disables parallelism to avoid concurrent API calls).
addopts = "-n auto --dist=worksteal -m 'not integration'"
markers = [
    "integration: marks tests that hit real LLM APIs (opt in with: -m integration)",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (we use 120 but some tool descriptions are longer)
    "F401",   # unused imports (some are re-exports)
]
